--- a/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_detail.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_detail.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 {% block content %}
-<table class="table">
+<table class="table-2">
     <thead class="inter-fz">
 		<tr>
             <th>Наименование онтологии</th>
