--- a/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_list.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_list.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="{% static 'ontology_auth/favicon.ico' %}" />
+    <script src="{% static 'ontology_auth/ontology_list.js' %}"></script>
 </head>
 <body>
     <div class="name_wrapper">
@@ -23,7 +24,17 @@
             <button class="btn_wrappr_1 inter-fz-1" style="margin-left:40px;" onclick="window.location.href='/ontology/new/predicat/'; return false">Создать предикат</button>
         </div>
     </div>
-<table class="table">
+    <div style="margin-bottom:20px; margin-left: 30px">
+        <table class="table-1">
+            <tr>
+                <th onclick="clicker()">Онтологии</th>
+                <th onclick="subject_list()">Субъекты</th>
+                <th>Объекты</th>
+            </tr>
+        </table>
+    </div>
+<div id="ontology_list">
+<table class="table-2">
     <thead class="inter-fz">
 		<tr>
 			<th>Наименование онтологии</th>
@@ -34,16 +45,20 @@
 	</thead>
 {% for ontology in ontologys %}
         <div class="inter-fz" gap="20px">
-            <tr >
+            <tr>
                 <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.name}}</td>
                 <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.access}}</td>
                 <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.created_at}}</td>
                 <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.owner}}</td>
                 <td>
-                <form action="" method="get">
-                    <script src="{% static 'ontology_auth/ontology_list.js' %}"></script>
-                    <button class = "btn_wrappr_1 inter-fz-1" name="delete_ontology" value="{{ ontology.id }}">Удалить</button>
-                </form>
+                    <form action="" method="get">
+                        <button class = "btn_wrappr_1 inter-fz-1" name="update_ontology" value="{{ ontology.id }}">Редактировать</button>
+                    </form>
+                    </td>
+                <td>
+                    <form action="" method="get">
+                        <button class = "btn_wrappr_1 inter-fz-1" name="delete_ontology" value="{{ ontology.id }}">Удалить</button>
+                    </form>
                 </td>
             </tr>
         </div>
@@ -53,5 +68,40 @@
     </div>
 {% endfor %}
 </table>
+</div>
+<div id="subject_list">
+<table class="table-2">
+    <thead class="inter-fz">
+		<tr>
+			<th>Наименование субъекта</th>
+			<th>Дата создания</th>
+			<th>Создатель субъекта</th>
+		</tr>
+	</thead>
+{% for subject in subjects %}
+        <div class="inter-fz" gap="20px">
+            <tr>
+                <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{subject.name}}</td>
+                <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{subject.created_at}}</td>
+                <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{subject.owner}}</td>
+                <td>
+                    <form action="" method="get">
+                        <button class = "btn_wrappr_1 inter-fz-1" name="update_ontology" value="{{ ontology.id }}">Редактировать</button>
+                    </form>
+                    </td>
+                <td>
+                    <form action="" method="get">
+                        <button class = "btn_wrappr_1 inter-fz-1" name="delete_ontology" value="{{ ontology.id }}">Удалить</button>
+                    </form>
+                </td>
+            </tr>
+        </div>
+    {% empty %}
+    <div class="title_weapper inter-fz fs-2" style="margin-left:20px;" >
+        <p>У вас пока нет субъектов!</p>
+    </div>
+{% endfor %}
+</table>
+</div>
 </body>
 </html>
