--- a/ontology_constructor/ontology_auth/static/ontology_auth/style_index.css
+++ b/ontology_constructor/ontology_auth/static/ontology_auth/style_index.css
@@ -1,14 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-
 .inter-fz {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
-    font-variation-settings:
-        "slnt" 0;
+    font-variation-settings: "slnt" 0;
 }
-
 
 .center_content {
     padding: 120px;
@@ -23,7 +20,12 @@
     color: white;
     font-family: "Inter", sans-serif;
     padding: 24px, 32px, 24px, 32px;
+}
 
+button:hover {
+    background-color: #E0E0E0;
+    border-radius: 8px;
+    border: #E0E0E0 solid;
 }
 
 .ipt_wrapper>input {
@@ -32,9 +34,7 @@
     border-radius: 8px;
     border: #E0E0E0 solid 1px;
     padding-left: 10px;
-    
 }
-
 
 .inter-font-64 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -46,10 +46,10 @@
     padding-top: 32px;
 }
 
-.fs-36
-{
+.fs-36 {
     font-size: 24px;
 }
+
 
 /* input[type="email"]::-webkit-input-placeholder {
     
@@ -61,11 +61,9 @@ input[type="email"]::-moz-placeholder {
     color: gray;
 } */
 
-
-.g-color{
+.g-color {
     color: #828282;
 }
-
 
 body {
     position: absolute;
