--- a/ontology_constructor/ontology_auth/templates/ontology_auth/index.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/index.html
@@ -5,8 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'ontology_auth/style_index.css' %}">
     <link rel="shortcut icon" type="image/png" href="{% static 'ontology_auth/favicon.ico' %}" />
 
@@ -40,7 +39,7 @@
         </div>
 
         <div class="name_wrapper">
-
+            {% csrf_token %}
             <div class="title_weapper inter-fz fs-1">
                 <p>Конструктор онтологий</p>
             </div>
