--- a/ontology_constructor/ontology_auth/templates/ontology_auth/menu.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/menu.html
@@ -5,15 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Document</title>
 </head>
 
 <body>
     <div class="side_menu_wrapper d-flex flex-column w-25 gap-5
     ">
-
+        {% if request.user.is_authenticated %} auth {% else %} guest {% endif %}
 
         <a href="">
             <p>Каталог онтологий</p>
@@ -28,11 +27,7 @@
             <p>Создать онтологию</p>
         </a>
 
-        {% if request.user.is_authenticated %}
-        AUTHED - USER NAME
-        {% else %}
-        GUEST
-        {% endif %}
+        {% if request.user.is_authenticated %} AUTHED - USER NAME {% else %} GUEST {% endif %}
 
 
 
