--- a/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_list.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_list.html
@@ -1,23 +1,24 @@
-<!DOCTYPE html>
 {% load static %}
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мои онтологии</title>
     <link rel="stylesheet" href="{% static 'ontology_auth/style_ontology_list.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="{% static 'ontology_auth/favicon.ico' %}" />
     <script src="{% static 'ontology_auth/ontology_list.js' %}"></script>
 </head>
+
 <body>
     <div class="name_wrapper">
-        <div class="title_weapper inter-fz fs-2" style="margin-left:20px; text-align: center" >
+        <div class="title_weapper inter-fz fs-2" style="margin-left:20px; text-align: center">
             <p>Список онтологий</p>
         </div>
     </div>
-    <div class="title_weapper inter-fz fs-4" style="margin-left:20px;" >
+    <div class="title_weapper inter-fz fs-4" style="margin-left:20px;">
         <div class="btn_wrappr inter-fz-1 fs-4" style="margin-left:40px; margin-bottom:40px;">
             <button class="btn_wrappr_1 inter-fz-1" style="margin-left:40px;" onclick="window.location.href='/ontology/new/subject/'; return false">Создать субъект</button>
             <button class="btn_wrappr_1 inter-fz-1" style="margin-left:40px;" onclick="window.location.href='/ontology/new/object/'; return false">Создать объект</button>
@@ -33,75 +34,76 @@
             </tr>
         </table>
     </div>
-<div id="ontology_list">
-<table class="table-2">
-    <thead class="inter-fz">
-		<tr>
-			<th>Наименование онтологии</th>
-			<th>Доступность онтологии</th>
-			<th>Дата создания онтологии</th>
-			<th>Создатель онтологии</th>
-		</tr>
-	</thead>
-{% for ontology in ontologys %}
-        <div class="inter-fz" gap="20px">
-            <tr>
-                <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.name}}</td>
-                <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.access}}</td>
-                <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.created_at}}</td>
-                <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.owner}}</td>
-                <td>
-                    <form action="" method="get">
-                        <button class = "btn_wrappr_1 inter-fz-1" name="update_ontology" value="{{ ontology.id }}">Редактировать</button>
-                    </form>
+    <div id="ontology_list">
+        <table class="table-2">
+            <thead class="inter-fz">
+                <tr>
+                    <th>Наименование онтологии</th>
+                    <th>Доступность онтологии</th>
+                    <th>Дата создания онтологии</th>
+                    <th>Создатель онтологии</th>
+                </tr>
+            </thead>
+            {% for ontology in ontologys %}
+            <div class="inter-fz" gap="20px">
+                <tr>
+                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.name}}</td>
+                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.access}}</td>
+                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.created_at}}</td>
+                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.owner}}</td>
+                    <td>
+                        <form action="" method="get">
+                            <button class="btn_wrappr_1 inter-fz-1" name="update_ontology" value="{{ ontology.id }}">Редактировать</button>
+                        </form>
                     </td>
-                <td>
-                    <form action="" method="get">
-                        <button class = "btn_wrappr_1 inter-fz-1" name="delete_ontology" value="{{ ontology.id }}">Удалить</button>
-                    </form>
-                </td>
-            </tr>
-        </div>
-    {% empty %}
-    <div class="title_weapper inter-fz fs-2" style="margin-left:20px;" >
-        <p>У вас пока нет онтологий!</p>
-    </div>
-{% endfor %}
-</table>
-</div>
-<div id="subject_list">
-<table class="table-2">
-    <thead class="inter-fz">
-		<tr>
-			<th>Наименование субъекта</th>
-			<th>Дата создания</th>
-			<th>Создатель субъекта</th>
-		</tr>
-	</thead>
-{% for subject in subjects %}
-        <div class="inter-fz" gap="20px">
-            <tr>
-                <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{subject.name}}</td>
-                <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{subject.created_at}}</td>
-                <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{subject.owner}}</td>
-                <td>
-                    <form action="" method="get">
-                        <button class = "btn_wrappr_1 inter-fz-1" name="update_ontology" value="{{ ontology.id }}">Редактировать</button>
-                    </form>
+                    <td>
+                        <form action="" method="get">
+                            <button class="btn_wrappr_1 inter-fz-1" name="delete_ontology" value="{{ ontology.id }}">Удалить</button>
+                        </form>
                     </td>
-                <td>
-                    <form action="" method="get">
-                        <button class = "btn_wrappr_1 inter-fz-1" name="delete_ontology" value="{{ ontology.id }}">Удалить</button>
-                    </form>
-                </td>
-            </tr>
-        </div>
-    {% empty %}
-    <div class="title_weapper inter-fz fs-2" style="margin-left:20px;" >
-        <p>У вас пока нет субъектов!</p>
+                </tr>
+            </div>
+            {% empty %}
+            <div class="title_weapper inter-fz fs-2" style="margin-left:20px;">
+                <p>У вас пока нет онтологий!</p>
+            </div>
+            {% endfor %}
+        </table>
     </div>
-{% endfor %}
-</table>
-</div>
+    <div id="subject_list">
+        <table class="table-2">
+            <thead class="inter-fz">
+                <tr>
+                    <th>Наименование субъекта</th>
+                    <th>Дата создания</th>
+                    <th>Создатель субъекта</th>
+                </tr>
+            </thead>
+            {% for subject in subjects %}
+            <div class="inter-fz" gap="20px">
+                <tr>
+                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{subject.name}}</td>
+                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{subject.created_at}}</td>
+                    <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{subject.owner}}</td>
+                    <td>
+                        <form action="" method="get">
+                            <button class="btn_wrappr_1 inter-fz-1" name="update_ontology" value="{{ ontology.id }}">Редактировать</button>
+                        </form>
+                    </td>
+                    <td>
+                        <form action="" method="get">
+                            <button class="btn_wrappr_1 inter-fz-1" name="delete_ontology" value="{{ ontology.id }}">Удалить</button>
+                        </form>
+                    </td>
+                </tr>
+            </div>
+            {% empty %}
+            <div class="title_weapper inter-fz fs-2" style="margin-left:20px;">
+                <p>У вас пока нет субъектов!</p>
+            </div>
+            {% endfor %}
+        </table>
+    </div>
 </body>
+
 </html>
