--- a/ontology_constructor/ontology_auth/templates/ontology_auth/register.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/register.html
@@ -1,20 +1,21 @@
-{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+
+
 <body>
 
-    {% if field.errors%}
-    {% for error in field.errors %}
+    {% if field.errors%} {% for error in field.errors %}
     <div class="alert alert-danger">
         {{error}}
     </div>
-    {% endfor %}
-    {% endif %}
+    {% endfor %} {% endif %}
 
     <div class="content-section">
         <form method="POST">
@@ -37,4 +38,5 @@
         </div>
     </div>
 </body>
+
 </html>
