--- a/ontology_constructor/ontology_auth/templates/ontology_auth/add_rdf_type.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/add_rdf_type.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html> {% load static %}
+<!DOCTYPE html> 
+{% load static %}
 <html lang="en">
 
 <head>
@@ -17,20 +18,22 @@
                 <p>Создание предиката</p>
             </div>
         </div>
-        {% csrf_token %} {% for field in form %}
+        {% csrf_token %} 
+        {% for field in form %}
         <div style="margin:20px;" gap="20px">
             {{field.label_tag}}
             <div gap="20px">{{field}}</div>
-            {% if field.errors%} {% for error in field.errors %}
+            {% if field.errors%} 
+            {% for error in field.errors %}
             <div class="alert alert-danger">
                 {{error}}
             </div>
-            {% endfor %} {% endif %}
+            {% endfor %} 
+            {% endif %}
         </div>
         {% endfor %}
         <button class="btn_wrappr" type="submit" style="margin-left:20px;" gap="20px">Сохранить</button>
     </form>
-    {% endblock %}
 </body>
 
 </html>
