Добавлены логотипы входа и выхода

--- a/ontology_constructor/ontology_auth/static/ontology_auth/style_profile.css
+++ b/ontology_constructor/ontology_auth/static/ontology_auth/style_profile.css
@@ -8,6 +8,17 @@
     padding: 12px;
 }
 
+.logout_wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.login_wrapper>img {
+    width: 16px;
+    height: 16px;
+}
+
 p {
     font-size: 26px;
 }
