--- a/ontology_constructor/ontology_auth/templates/ontology_auth/profile.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/profile.html
@@ -44,19 +44,24 @@
             <a href="">
                 <p>Создать онтологию</p>
             </a>
-            <hr> {% if request.user.is_authenticated %}
-            <img src="{% static 'ontology_auth/logout.png'%}" alt="">
-            <a href="{% url 'logout' %}">Выйти</a> {% else %}
-
-            <a href="{% url 'auth' %}">Войти</a> {% endif %}
-            <br>
+            {% if request.user.is_authenticated %}
+            <div class="logout_wrapper">
+                <img src="{% static 'ontology_auth/logout.png'%}" alt="">
+                <a href="{% url 'logout' %}">Выйти</a>
+            </div>
+            {% else %}
+            <div class="login_wrapper">
+                <img src="{% static 'ontology_auth/login.png'%}" alt="">
+                <a href="{% url 'auth' %}">Войти</a>
+            </div>
+            {% endif%}
             <!-- <p>МГТУ ИМ Н.Э. Баумана</p> -->
         </div>
         <div class="data-conteiner">
             <H1>Мои онтологии</H1>
             <h1> Что-то </h1>
         </div>
-        <hr>
+
     </div>
 
 
