добавили мои онтологии

--- a/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_list.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_list.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="title_weapper inter-fz fs-4" style="margin-left:20px;">
-        <div class="btn_wrappr inter-fz-1 fs-4" style="margin-left:40px; margin-bottom:40px;">
+        <div class="btn_wrappr inter-fz-1 fs-4" >
             <button class="btn_wrappr_1 inter-fz-1" style="margin-left:40px;" onclick="window.location.href='/ontology/new/subject/'; return false">Создать субъект</button>
             <button class="btn_wrappr_1 inter-fz-1" style="margin-left:40px;" onclick="window.location.href='/ontology/new/object/'; return false">Создать объект</button>
             <button class="btn_wrappr_1 inter-fz-1" style="margin-left:40px;" onclick="window.location.href='/ontology/new/predicat/'; return false">Создать предикат</button>
