--- a/ontology_constructor/ontology_auth/static/ontology_auth/style_ontology_list.css
+++ b/ontology_constructor/ontology_auth/static/ontology_auth/style_ontology_list.css
@@ -62,10 +62,15 @@
     border: #E0E0E0;
     width: 300px;
     height: 50px;
-    color: #black;
+    color: black;
     font-family: "Inter", sans-serif;
     padding: 3px, 3px, 3px, 3px;
+    margin-bottom: 40px;
 
+}
+.btn_wrappr {
+    display: flex;
+    flex-direction: row;
 }
 
 .btn_wrappr_1>button {
@@ -74,7 +79,7 @@
     border: #E0E0E0;
     width: 300px;
     height: 50px;
-    color: #black;
+    color: black;
     font-family: "Inter", sans-serif;
     padding: 3px, 3px, 3px, 3px;
 
