--- a/ontology_constructor/ontology_auth/templates/ontology_auth/auth.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/auth.html
@@ -36,7 +36,7 @@
                     </a>
                 </div>
             </div>
-            <!-- Войти через VK ID -->
+            Войти через VK ID
         </form>
 
     </div>
