--- a/ontology_constructor/ontology_auth/static/ontology_auth/style_auth.css
+++ b/ontology_constructor/ontology_auth/static/ontology_auth/style_auth.css
@@ -9,7 +9,14 @@ body {
     width: 100%;
     height: 100%;
 }
-
+.inter-fz {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-variation-settings:
+        "slnt" 0;
+}
 .create_account {
     font-size: 24px;
     font-family: "Inter";
@@ -36,6 +43,13 @@ body {
 }
 
 input[type="text"] {
+    background-color: white;
+    border-radius: 8px;
+    border: 1px solid #E0E0E0;
+    padding: 8px;
+    width: 100%;
+}
+textarea {
     background-color: white;
     border-radius: 8px;
     border: 1px solid #E0E0E0;
