--- a/ontology_constructor/ontology_auth/templates/ontology_auth/add_object.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/add_object.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Создание субъекта</title>
-    <link rel="stylesheet" href="{% static 'ontology_auth/style_add.css' %}">
+    <link rel="stylesheet" href="{% static 'ontology_auth/style_auth.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="{% static 'ontology_auth/favicon.ico' %}" />
@@ -22,7 +22,7 @@
         {% for field in form %}
         <div style="margin:20px;" gap="20px">
             {{field.label_tag}}
-            <div gap="20px" >{{field}}</div>
+            <div gap="20px">{{field}}</div>
             {% if field.errors%}
             {% for error in field.errors %}
             <div class="alert alert-danger">
@@ -32,7 +32,7 @@
             {% endif %}
         </div>
         {% endfor %}
-        <button class="btn_wrappr" type="submit" style="margin-left:20px;" gap="20px">Сохранить</button>
+        <button class="btn-auth" type="submit" style="margin-left:20px;" gap="20px">Сохранить</button>
     </form>
 {% endblock %}
 </body>
