--- a/ontology_constructor/ontology_auth/templates/ontology_auth/add_ontology.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/add_ontology.html
@@ -32,7 +32,7 @@
             {% endif %}
         </div>
         {% endfor %}
-        <button class="btn_wrappr" type="submit" style="margin-left:20px;" gap="20px">Сохранить</button>
+        <button class="btn-auth" type="submit" style="margin-left:20px;" gap="20px">Сохранить</button>
     </form>
 {% endblock %}
 </body>
