--- a/ontology_constructor/ontology_auth/static/ontology_auth/style_auth.css
+++ b/ontology_constructor/ontology_auth/static/ontology_auth/style_auth.css
@@ -128,3 +128,37 @@ input[type="password"]::-moz-placeholder {
     text-align: center;
     justify-content: center;
 }
+
+form select { 
+    
+    font-size: 23px; 
+    font-family: "Inter", sans-serif; 
+    font-weight: 400; 
+    color: #444; 
+    line-height: 1.3; 
+    padding: .6em 1.4em .5em .8em; 
+    width: 100px; 
+    max-width: 100%; 
+    box-sizing: border-box; 
+    margin: 20px 20px 20px 20px; 
+    border: 2px solid black;
+    border-radius: .5em;
+    outline: none;
+    background-position: right .7em top 50%, 0 0;
+    background-size: .65em auto, 100%; 
+    } 
+     form select::-ms-expand { display: none; } 
+     form select:hover { border-color: #888;} 
+     form select:active, form select:hover {
+        outline-color:  #888;
+      }
+    
+     form select:focus { border-color: #aaa; 
+    color: #222;
+     outline: none; 
+    } 
+     form select option { font-weight:normal; } 
+     *[dir="rtl"] form select, :root:lang(ar) form select, :root:lang(iw) form select { 
+    background-position: left .7em top 50%, 0 0; 
+    padding: .6em .8em .5em 1.4em; 
+    }
