--- a/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_detail.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_detail.html
@@ -33,6 +33,9 @@
     <button class="button" onclick="edited()" id="edit">Редактировать</button>
     
     {% block content %}
+    <div class="title_weapper inter-fz fs-4" gap="20 px">
+        Список предикатов
+    </div>
     <table class="table-2">
         <thead class="inter-fz">
                 <th>Наименование онтологии</th>
