--- a/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_list.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/ontology_list.html
@@ -54,7 +54,7 @@
                     <td class="inter-fz-1" onclick="window.location.href='/ontology/{{ ontology.id }}'; return false">{{ontology.owner}}</td>
                     <td>
                         <form action="" method="get">
-                            <button class="btn_wrappr_1 inter-fz-1" name="delete_ontology" value="{{ ontology.id }}">Удалить</button>
+                            <button class="button inter-fz-1" name="delete_ontology" value="{{ ontology.id }}">Удалить</button>
                         </form>
                     </td>
                 </tr>
@@ -109,7 +109,7 @@
                     <td class="inter-fz-1" onclick="window.location.href='/object/{{ object.id }}'; return false">{{object.owner}}</td>
                     <td>
                         <form action="" method="get">
-                            <button class="btn_wrappr_1 inter-fz-1" name="delete_object" value="{{ object.id }}">Удалить</button>
+                            <button class="button inter-fz-1" name="delete_object" value="{{ object.id }}">Удалить</button>
                         </form>
                     </td>
                 </tr>
@@ -138,7 +138,7 @@
                         <td class="inter-fz-1" onclick="window.location.href='/subject/{{ subject.id }}'; return false">{{subject.owner}}</td>
                         <td>
                             <form action="" method="get">
-                                <button class="btn_wrappr_1 inter-fz-1" name="delete_subject" value="{{ subject.id }}">Удалить</button>
+                                <button class="button inter-fz-1" name="delete_subject" value="{{ subject.id }}">Удалить</button>
                             </form>
                         </td>
                     </tr>
