--- a/ontology_constructor/ontology_auth/templates/ontology_auth/subject_detail.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/subject_detail.html
@@ -32,7 +32,9 @@
     
     
     <button class="button inter-fz fs-6" onclick="edited()" id="edit">Редактировать</button>
-    
+    <div class="title_weapper inter-fz fs-4" gap="20 px">
+        Список предикатов
+    </div>
     {% block content %}
     <table class="table-2">
         <thead class="inter-fz">
