Убрана возможность редактировать чужие онтологии и предикаты

--- a/ontology_constructor/ontology_auth/templates/ontology_auth/object_detail.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/object_detail.html
@@ -31,7 +31,9 @@
     </form>
     
     
-    <button class="button inter-fz fs-6" onclick="edited()" id="edit">Редактировать</button>
+    
+    <button class="button" onclick="edited()" id="edit">Редактировать</button>
+    
     <div class="title_weapper inter-fz fs-4" gap="20 px">
         Список предикатов
     </div>
